--- a/introduction.mdx
+++ b/introduction.mdx
@@ -35,7 +35,8 @@ The first step to world-class documentation is setting up your editing environme
   </Card>
 </CardGroup>
 
-## Make it yours
+## dev expert
+this is a new file
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
